--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,16 +1,53 @@
 body {
-    display: flex;
-    justify-content: center;
-}
-main {
-    width: 500px;
+    margin: 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    padding: 10px 15px;
+    background-color: black;
+    padding: 20px;
+    height: 100vh;
+}
+div#root {
+    height: 100%;
+    width: 100%;
+    max-height: 400px;
+    max-width: 400px;
+}
+main {
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 h1 {
     font-size: 70px;
     margin-bottom: 10px;
     margin-top: 10px;
+}
+.dice-container {
+    display: grid;
+    grid-template: auto auto / repeat(5, 1fr);
+    gap: 20px;
+}
+button {
+    cursor: pointer;
+}
+.dice-container button {
+    height: 50px;
+    width: 50px;
+    border-radius: 10px;
+    font-size: 1.5rem;
+}
+button.roll-dice {
+    background-color: rgb(89, 89, 151);
+    color: white;
+    font-size: 1.3rem;
+    padding: 10px 25px;
+    border-radius: 5px;
+    border: none;
 }
