--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,10 +24,16 @@ main {
     justify-content: space-evenly;
     align-items: center;
 }
-h1 {
+.title {
     font-size: 70px;
     margin-bottom: 10px;
     margin-top: 10px;
+}
+.instructions {
+    font-weight: 400;
+    margin-top: 0;
+    text-align: center;
+    padding: 0px 18px;
 }
 .dice-container {
     display: grid;
@@ -50,4 +56,8 @@ button.roll-dice {
     padding: 10px 25px;
     border-radius: 5px;
     border: none;
+    margin-top: 15px;
+    margin-bottom: 25px;
+    white-space: nowrap;
+    width: auto;
 }
